# CS-331-Web-App-Project

./: README.md  README.org  devenv.nix  pyproject.toml  requirements.txt
holidays/: __init__.py
pages/: index.html  results.html  search.html  today.html
src/calendar_app/: __init__.py  dependencies.py  models.py  router.py
src/calendar_app/services/: __init__.py  holiday_service.py
static/: scripts.js  styles.css
templates/: index.html  results.html  search.html  today.html
