[tool.poetry]
name = "holidays"
version = "1.0.0"
description = "Search for Holidays for Today and other days"
authors = ["Ian Kollipara <ian.kollipara@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
